[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://actor/constuction/construction_assets/Bullet.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.45901
height = 33.1815

[node name="bullet" type="Area2D"]
script = ExtResource( 2 )

[node name="bulletSprite" type="Sprite" parent="."]
scale = Vector2( 0.125, 0.625 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
